colab link for master branch

--- a/examples/hyperbolic_multiclass_classification.ipynb
+++ b/examples/hyperbolic_multiclass_classification.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "# Welcome\n",
     "\n",
-    "Hi, Nomad! Welcome to geoopt room. I've prepared a toy notebook playground to check geoopt out and see how it works within pytorch ecosystem. \n",
+    "Hi, Nomad! Welcome to geoopt room. I've prepared a toy notebook playground to check geoopt out and see how it works within pytorch ecosystem. [Open in Colab](https://colab.research.google.com/github/geoopt/geoopt/blob/master/examples/hyperbolic_multiclass_classification.ipynb)\n",
     "\n",
     "## Installation\n",
     "\n",
